...
    if (_currentIndex == 0) {
      return AppBar(
        actions: <Widget>[
          searchIconButton(),
          Container(
            child: IconButton(
              key: Key('NewAccountIconButton'),
              icon: Icon(Icons.add, size: 30.0),
              onPressed: () {
                _navigateToNewAccount(context);
              },
            ),
          ),
...
    if (_currentIndex == 1) {
      return AppBar(
        actions: [
          searchIconButton(),
          Container(
            child: IconButton(
              key: Key('NewNoteIconButton'),
              icon: Icon(Icons.add, size: 30.0),
              onPressed: () {
                _navigateToNewNote(context);
              },
            ),
          ),
...
                child: Text('Cancel'),
                onPressed: () {
                  Navigator.of(context).pop();
                },
              ),
              TextButton(
                key: Key('LockVaultConfirmationTextButton'),
                child: Text('OK'),
                onPressed: () {
                  lock = true;
                  if (dontShowLockHelperAgain) {
                    ScopedModel.of<NCryptModel>(context)
                        .setHideLockDialog(true);
...
